--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -25,7 +25,6 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
         #product-select-option-{{ option_index }} { display: none; }
         #product-select-option-{{ option_index }} + .custom-style-select-box { display: none !important; }
       </style>
-      <script>$(window).load(function() { $('.selector-wrapper:eq({{ option_index }})').hide(); });</script>
       {% assign downcased_option = swatch | downcase %}
       {% if downcased_option contains 'color' or downcased_option contains 'colour' %}
         {% assign is_color = true %}
@@ -139,13 +138,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
   </div>
 {%- endunless -%}
 {%- endif -%}
-<script>
-  jQuery('.swatch[data-option-index="{{ option_index }}"] .{{ value | handle }}').removeClass('soldout').addClass('available').find(':radio').removeAttr('disabled');
-   {% unless section.settings.enable_default_variant %}
-        jQuery('.swatch').each(function(){
-    $(this).find('.available').eq(0).find(':radio').prop( "checked", true );});
-  {% endunless %}
-</script>
+
 <style>
 .size-label {
     width: 95px;
@@ -175,7 +168,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
     }
   }
   .swatch {overflow: hidden;}
-  .swatch-nav, .header {display: flex;}
+  .swatch-nav, .swatch .header {display: flex;}
   .swatch-nav {
     margin-left: auto;
     order: 2;
