--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,2 +1,2 @@
 {% comment %}ly_global_begin{% endcomment %}{% include 'ly-global' %}{% comment %}ly_global_end{% endcomment %}
-{{ content_for_index }}
+{%- section 'redesign-index-page' -%}
