--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -465,7 +465,7 @@ qp('track', 'ViewContent');
                                         <div class="menu__card-label">Bestseller</div>
                                     </a></div>
                             </div>
-                            <div class="menu__submenu-banners"><a class="menu__banner" href="#">
+                            <div class="menu__submenu-banners"><a class="menu__banner" href="/pages/promotions">
                                     <div class="menu__banner-image"><img src="{{'redesign-menu-banner.jpg' | asset_url }}" alt="" /></div>
                                     <div class="menu__banner-content">
                                         <div class="menu__banner-text">Buy any 3 Jigsaw puzzles and get</div>
@@ -586,7 +586,7 @@ qp('track', 'ViewContent');
     </div>
 </footer>
 
-<script src="{{'redesign-app.js' | asset_url }}"></script>
+<script src="{{'redesign-app.min.js' | asset_url }}"></script>
 <div style="display: none;">{% include 'redesign-sprite.svg' %}</div>
 
 
