--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -390,6 +390,7 @@ qp('track', 'ViewContent');
           assign ulr_path = '/'
           endcase
           -%}
+          {{ulr_path}}
         <div class="lang header__lang"><button class="lang__toggle" type="button"><img class="lang__toggle-icon" src="{{'redesign-flags-english.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__toggle-caption">English</span></button>
             <div class="lang__dropdown">
                 <ul class="lang__items">
