Redesign error fix

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -381,11 +381,11 @@ qp('track', 'ViewContent');
         {%- liquid
           case shop.locale
           when 'es'
-          assign ulr_path = '/es'
+          assign ulr_path = '/es/'
           when 'ar'
-          assign ulr_path = '/ar'
+          assign ulr_path = '/ar/'
           when 'pt-PT'
-          assign ulr_path = '/pt-pt'
+          assign ulr_path = '/pt-pt/'
           when 'en'
           assign ulr_path = ''
           endcase
