AB test HERO video section

--- a/sections/redesign-index-page.liquid
+++ b/sections/redesign-index-page.liquid
@@ -1,4 +1,109 @@
-
+    <style>
+      /*===== START BORDER STYLE CSS =====*/
+      
+       /*===== END BORDER STYLE CSS =====*/
+      
+      /*===== START PARALLAX CSS =====*/
+      
+      
+       #shopify-section-1522671309651 .hero {  
+        position: relative;
+        background-attachment: fixed;
+        background-position: center center;
+        background-size: cover;
+      }	
+      @media only screen and (min-width:749px) and (max-width:1024px) {
+        #shopify-section-1522671309651 .hero {
+          background-attachment: scroll;     
+        }
+      }
+      @media only screen and (max-width:749px) {
+         #shopify-section-1522671309651 .hero {
+          background-attachment: scroll; 
+        }
+      }
+      
+      /*===== END PARALLAX CSS =====*/
+      
+     .hero .mega-subtitle {
+        margin: 0;
+        display: inline-block;
+      }
+    
+      #shopify-section-1522671309651 .hero__btn {
+        
+        
+      }
+      @media only screen and (min-width:750px) {
+        #shopify-section-1522671309651 .hero__btn {
+          
+        }
+      }@media only screen and (max-width:456px) {
+        .hero.hero--medium.hero__overlay.box.ratio-container.js.lazyloaded{
+          height: 210px;
+        }
+      }
+      
+    </style>
+    <div id="ab_test_hero" class="hero hero--medium hero__overlay box ratio-container js lazyloaded" data-bgset="//cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_180x.jpg?v=1588268038 180w 180h,
+        //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_360x.jpg?v=1588268038 360w 360h,
+        //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_540x.jpg?v=1588268038 540w 540h,
+        //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_720x.jpg?v=1588268038 720w 720h,
+        //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_900x.jpg?v=1588268038 900w 900h,
+        //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_1080x.jpg?v=1588268038 1080w 1080h,
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1.jpg?v=1588268038 1280w 1280h" data-parent-fit="cover" style="display:none;background-position: center center; background-image: url(&quot;https://cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1.jpg?v=1588268038&quot;);">
+      
+    <style>
+            .collection-hero {max-height: 375px!important;}
+            #myVide-mob {display:none;}
+            @media (max-width: 768px) {
+              #myVide-mob {display:inherit}
+              #myVideo {display: none;}
+            }
+        </style>
+        <video autoplay="" muted="" loop="" playsinline="" id="myVideo" style="object-fit: cover;width: 100vw;">
+          <source src="https://cdn.shopify.com/s/files/1/0010/6348/5558/files/1980v23_c.mp4?v=1638435636" type="video/mp4">
+        </video>
+        <video autoplay="" muted="" loop="" playsinline="" id="myVide-mob" style="object-fit: cover;width: 100vw;">
+          <source src="https://cdn.shopify.com/s/files/1/0010/6348/5558/files/480v3.mp4?v=1638435636" type="video/mp4">
+        </video>
+      <div class="hero__inner">
+        <div class="page-width text-center">
+          
+            <h1 class="h1 hero_title mega-title imgsldover ">ENTHRALLING WOODEN PUZZLES</h1>
+          <div class="border_width"></div>
+          
+          
+            <div class="rte-setting hero_sub_title mega-subtitle imgsldover_sub imgsldover_sub"><p>Unidragon</p></div>
+          
+          
+          <div class="btn_hero">  
+          <a href="/collections/wooden-puzzles" class="btn hero__btn">
+              SHOP NOW
+            </a>
+          </div>
+          
+        </div>
+      </div>
+    <picture style="display: none;"><source data-srcset="//cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_180x.jpg?v=1588268038 180w 180h, //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_360x.jpg?v=1588268038 360w 360h, //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_540x.jpg?v=1588268038 540w 540h, //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_720x.jpg?v=1588268038 720w 720h, //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_900x.jpg?v=1588268038 900w 900h, //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_1080x.jpg?v=1588268038 1080w 1080h, //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1.jpg?v=1588268038 1280w 1280h" sizes="1595px" srcset="//cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_180x.jpg?v=1588268038 180w 180h, //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_360x.jpg?v=1588268038 360w 360h, //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_540x.jpg?v=1588268038 540w 540h, //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_720x.jpg?v=1588268038 720w 720h, //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_900x.jpg?v=1588268038 900w 900h, //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_1080x.jpg?v=1588268038 1080w 1080h, //cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1.jpg?v=1588268038 1280w 1280h"><img alt="" class="lazyautosizes lazyloaded" data-sizes="auto" data-parent-fit="cover" sizes="1595px"></picture></div>
+    
+    <noscript>
+      <div class="hero hero--medium hero__overlay" style="background-image: url('//cdn.shopify.com/s/files/1/0010/6348/5558/files/unidragon-wooden-jigsaw-puzzle-1_2048x.jpg?v=1588268038'); background-position: center center;"></div>
+    </noscript>
+    
+    
     <div class="banners-1 page__banners-1">
         <div class="banners-1__container">
             <div class="banners-1__banners">
