--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -21,7 +21,7 @@
   <meta name="msapplication-TileColor" content="#1a1a1a" />
   <meta name="msapplication-config" content="{{'redesign-browserconfig.xml' | asset_url }}" />
 
-{%unless template == 'index'%}  {{ 'theme.scss.css' | asset_url | stylesheet_tag }} {%endunless%}
+ {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
 
   <!-- KV 15/02 -->
   <meta name="google-site-verification" content="a4TAWTeb_JqFZ6hfN97VJ_UnJcM5d9ONGZ_qf7-S2JY" />
@@ -387,16 +387,16 @@ qp('track', 'ViewContent');
           when 'pt-PT'
           assign ulr_path = '/pt-pt/'
           when 'en'
-          assign ulr_path = ''
+          assign ulr_path = '/'
           endcase
           -%}
         <div class="lang header__lang"><button class="lang__toggle" type="button"><img class="lang__toggle-icon" src="{{'redesign-flags-english.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__toggle-caption">English</span></button>
             <div class="lang__dropdown">
                 <ul class="lang__items">
-                    <li class="lang__item{% unless request.path contains '/'%} current{%endunless%}"><a class="lang__item-link" href="//unidragon.com{{ request.path | remove_first: ulr_path }}"><img class="lang__item-icon" src="{{'redesign-flags-english.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">English</span></a></li>
+                    <li class="lang__item{% if shop.locale == 'en'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/{{ request.path | remove_first: ulr_path }}"><img class="lang__item-icon" src="{{'redesign-flags-english.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">English</span></a></li>
                     <li class="lang__item{% if request.path contains '/es'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/es/{{ request.path | remove_first: ulr_path }}"><img class="lang__item-icon" src="{{'redesign-flags-es.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">Spanish</span></a></li>
                     <li class="lang__item{% if request.path contains '/ar'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/ar/{{ request.path | remove_first: ulr_path }}"><img class="lang__item-icon" src="{{'redesign-flags-ar.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">Arabic</span></a></li>
-                    <li class="lang__item{% if request.path contains '/pt-PT'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/pt-pt/{{ request.path | remove_first: ulr_path }}"><img class="lang__item-icon" src="{{'redesign-flags-pt.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">Portuguese</span></a></li>
+                    <li class="lang__item{% if request.path contains '/pt-'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/pt-pt/{{ request.path | remove_first: ulr_path }}"><img class="lang__item-icon" src="{{'redesign-flags-pt.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">Portuguese</span></a></li>
                 </ul>
             </div>
         </div>
@@ -513,7 +513,7 @@ qp('track', 'ViewContent');
     </div>
 </header>
 <div class="page-container" id="PageContainer">
-  <main class="main-content" id="MainContent" role="main">
+  <main class="page__content" id="MainContent" role="main">
 {{ content_for_layout }}
 
 </main>
