--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -373,7 +373,6 @@ qp('track', 'ViewContent');
 
 
   {% section 'redesign-header' %}
-
 <div class="page-container" id="PageContainer">
   <main class="page__content" id="MainContent" role="main">
 {{ content_for_layout }}
@@ -428,9 +427,9 @@ qp('track', 'ViewContent');
                     </nav>
                 </div>
                 <div class="footer__col footer__col--follow">
-                    <div class="footer__title">Follow us</div><a class="footer__social" href="https://www.facebook.com/Unidragon.World" target="_blank" rel="nofollow noopener"><svg class="svg-icon svg-icon--facebook-2 footer__social-icon">
+                    <div class="footer__title">Follow us</div><a class="footer__social" href="https://www.facebook.com/unidragonPuzzle" target="_blank" rel="nofollow noopener"><svg class="svg-icon svg-icon--facebook-2 footer__social-icon">
                             <use xlink:href="#facebook-2"></use>
-                        </svg><span class="footer__social-caption">Unidragon.World</span></a><a class="footer__social" href="https://instagram.com/unidragon_com" target="_blank" rel="nofollow noopener"><svg class="svg-icon svg-icon--instagram-2 footer__social-icon">
+                        </svg><span class="footer__social-caption">UnidragonPuzzle</span></a><a class="footer__social" href="https://instagram.com/unidragon_com" target="_blank" rel="nofollow noopener"><svg class="svg-icon svg-icon--instagram-2 footer__social-icon">
                             <use xlink:href="#instagram-2"></use>
                         </svg><span class="footer__social-caption">unidragon_com</span></a>
                 </div>
@@ -441,7 +440,7 @@ qp('track', 'ViewContent');
     <div class="footer__bottom">
         <div class="footer__container">
             <div class="footer__bottom-row">
-                <p class="footer__bottom-text">&copy;&nbsp;2021 Unidragon</p>
+                <p class="footer__bottom-text">&copy;&nbsp;{{ "now" | date: "%Y" }}. Unidragon</p>
                 <p class="footer__bottom-text">All rights reserved.</p>
             </div>
         </div>
