--- a/sections/redesign-header.liquid
+++ b/sections/redesign-header.liquid
@@ -3,7 +3,7 @@
         <div class="header__shipping">Domestic u.s shipping – 2-6 Days</div>
     </div>
     <div class="header__main"><button class="btn-menu header__btn-menu" type="button" aria-label="Меню"><span class="btn-menu__line"></span><span class="btn-menu__line"></span><span class="btn-menu__line"></span></button>
-        <div class="logo header__logo"><a href="/"> <img src="{{'redesign-logo.svg' | asset_url }}" alt="UNIDRAGON" /></a></div>
+        <div class="logo header__logo"><a href="/"> <img loading="lazy" src="{{'redesign-logo.svg' | asset_url }}" alt="UNIDRAGON" /></a></div>
         {%- liquid
           case shop.locale
           when 'es'
@@ -16,13 +16,13 @@
           assign ulr_path = '/'
           endcase
           -%}
-        <div class="lang header__lang"><button class="lang__toggle" type="button"><img class="lang__toggle-icon" src="{{'redesign-flags-english.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__toggle-caption">English</span></button>
+        <div class="lang header__lang"><button class="lang__toggle" type="button"><img loading="lazy" class="lang__toggle-icon" src="{{'redesign-flags-english.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__toggle-caption">English</span></button>
             <div class="lang__dropdown">
                 <ul class="lang__items">
-                    <li class="lang__item{% if shop.locale == 'en'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/{{ request.path | remove_first: ulr_path }}"><img class="lang__item-icon" src="{{'redesign-flags-english.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">English</span></a></li>
-                    <li class="lang__item{% if request.path contains '/es'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/es/{{ request.path | remove_first: ulr_path }}"><img class="lang__item-icon" src="{{'redesign-flags-es.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">Spanish</span></a></li>
-                    <li class="lang__item{% if request.path contains '/ar'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/ar/{{ request.path | remove_first: ulr_path }}"><img class="lang__item-icon" src="{{'redesign-flags-ar.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">Arabic</span></a></li>
-                    <li class="lang__item{% if request.path contains '/pt-'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/pt-pt/{{ request.path | remove_first: ulr_path }}"><img class="lang__item-icon" src="{{'redesign-flags-pt.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">Portuguese</span></a></li>
+                    <li class="lang__item{% if shop.locale == 'en'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/{{ request.path | remove_first: ulr_path }}"><img loading="lazy" class="lang__item-icon" src="{{'redesign-flags-english.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">English</span></a></li>
+                    <li class="lang__item{% if request.path contains '/es'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/es/{{ request.path | remove_first: ulr_path }}"><img loading="lazy" class="lang__item-icon" src="{{'redesign-flags-es.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">Spanish</span></a></li>
+                    <li class="lang__item{% if request.path contains '/ar'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/ar/{{ request.path | remove_first: ulr_path }}"><img loading="lazy" class="lang__item-icon" src="{{'redesign-flags-ar.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">Arabic</span></a></li>
+                    <li class="lang__item{% if request.path contains '/pt-'%} current{%endif%}"><a class="lang__item-link" href="//unidragon.com/pt-pt/{{ request.path | remove_first: ulr_path }}"><img loading="lazy" class="lang__item-icon" src="{{'redesign-flags-pt.png' | asset_url }}" width="15" height="15" alt=""><span class="lang__item-caption">Portuguese</span></a></li>
                 </ul>
             </div>
         </div>
@@ -67,39 +67,39 @@
                             <div class="menu__submenu-main">
                                 <div class="menu__submenu-title">Top Collections</div>
                                 <div class="menu__cards"><a class="menu__card" href="/collections/wooden-puzzles">
-                                        <div class="menu__card-image"><img src="{{'redesign-menu-product-1.jpg' | asset_url }}" width="170" height="170" alt="" /></div>
+                                        <div class="menu__card-image"><img loading="lazy" src="{{'redesign-menu-product-1.jpg' | asset_url }}" width="170" height="170" alt="" /></div>
                                         <div class="menu__card-caption">Animals</div>
                                     </a><a class="menu__card" href="/products/quezzle">
-                                        <div class="menu__card-image"><img src="{{'redesign-menu-product-2.jpg' | asset_url }}" width="170" height="170" alt="" /></div>
+                                        <div class="menu__card-image"><img loading="lazy" src="{{'redesign-menu-product-2.jpg' | asset_url }}" width="170" height="170" alt="" /></div>
                                         <div class="menu__card-caption">Quezzle</div>
                                     </a><a class="menu__card" href="/collections/mandala-puzzles">
-                                        <div class="menu__card-image"><img src="{{'redesign-menu-product-3.jpg' | asset_url }}" width="170" height="170" alt="" /></div>
+                                        <div class="menu__card-image"><img loading="lazy" src="{{'redesign-menu-product-3.jpg' | asset_url }}" width="170" height="170" alt="" /></div>
                                         <div class="menu__card-caption">Mandala</div>
                                     </a></div>
                                 <div class="menu__submenu-title">Bestsellers</div>
                                 <div class="menu__cards"><a class="menu__card" href="/products/lovely-tiger">
-                                        <div class="menu__card-image"><img src="{{'redesign-menu-product-4.jpg' | asset_url }}" width="170" height="170" alt="" /></div>
+                                        <div class="menu__card-image"><img loading="lazy" src="{{'redesign-menu-product-4.jpg' | asset_url }}" width="170" height="170" alt="" /></div>
                                         <div class="menu__card-caption">Lovely tiger</div>
                                         <div class="menu__card-label">Bestseller</div>
                                     </a><a class="menu__card" href="/products/enchanting-owl">
-                                        <div class="menu__card-image"><img src="{{'redesign-menu-product-5.jpg' | asset_url }}" width="170" height="170" alt="" /></div>
+                                        <div class="menu__card-image"><img loading="lazy" src="{{'redesign-menu-product-5.jpg' | asset_url }}" width="170" height="170" alt="" /></div>
                                         <div class="menu__card-caption">Charming owl</div>
                                         <div class="menu__card-label">Bestseller</div>
                                     </a><a class="menu__card" href="/products/pre-order-majestic-wolf">
-                                        <div class="menu__card-image"><img src="{{'redesign-menu-product-6.jpg' | asset_url }}" width="170" height="170" alt="" /></div>
+                                        <div class="menu__card-image"><img loading="lazy" src="{{'redesign-menu-product-6.jpg' | asset_url }}" width="170" height="170" alt="" /></div>
                                         <div class="menu__card-caption">Majestic wolf</div>
                                         <div class="menu__card-label">Bestseller</div>
                                     </a></div>
                             </div>
                             <div class="menu__submenu-banners"><a class="menu__banner" href="/pages/promotions">
-                                    <div class="menu__banner-image"><img src="{{'redesign-menu-banner.jpg' | asset_url }}" alt="" /></div>
+                                    <div class="menu__banner-image"><img loading="lazy" src="{{'redesign-menu-banner.jpg' | asset_url }}" alt="" /></div>
                                     <div class="menu__banner-content">
                                         <div class="menu__banner-text">Buy any 3 Jigsaw puzzles and get</div>
                                         <div class="menu__banner-offer"><span class="menu__banner-value">10%</span> Discount</div>
                                     </div>
-                                </a><a class="menu__mob-banner" href="/pages/promotions"><img src="{{'redesign-menu-mob-banner-1.jpg' | asset_url }}" alt="" />
+                                </a><a class="menu__mob-banner" href="/pages/promotions"><img loading="lazy" src="{{'redesign-menu-mob-banner-1.jpg' | asset_url }}" alt="" />
                                     <div class="menu__mob-banner-caption">10% Discount</div>
-                                </a><a class="menu__mob-banner" href="/products/set-for-mounting-puzzles"><img src="{{'redesign-menu-mob-banner-2.jpg' | asset_url }}" alt="" />
+                                </a><a class="menu__mob-banner" href="/products/set-for-mounting-puzzles"><img loading="lazy" src="{{'redesign-menu-mob-banner-2.jpg' | asset_url }}" alt="" />
                                     <div class="menu__mob-banner-caption">Set for mounting puzzles</div>
                                 </a></div>
                         </div>
