--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -560,24 +560,12 @@ $slick-opacity-not-active: 0.25;
     left: auto;
     right: -25px;
   }
-  &:before {
-    content: $slick-prev-character;
-    [dir="rtl"] & {
-      content: $slick-next-character;
-    }
-  }
 }
 .slick-next {
   right: -25px;
   [dir="rtl"] & {
     left: -25px;
     right: auto;
-  }
-  &:before {
-    content: $slick-next-character;
-    [dir="rtl"] & {
-      content: $slick-prev-character;
-    }
   }
 }
 /* Dots */
@@ -2665,6 +2653,7 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
 .product-single {
   // prevent scroll anchoring within element
   overflow-anchor: none;
+  padding-top: 20px;
 }
 .product-single__title {
   margin-bottom: 10px;
