UN-1316 Блок доппродажи в главной корзине + аналитика

--- a/sections/cart-template.liquid
+++ b/sections/cart-template.liquid
@@ -5,7 +5,7 @@
       color: #ff7607;
     }
     .upsell-button {
-      background-color: #333333;
+      background-color: #ff862d;
       font-weight: bold;
       color: white;
       text-transform: uppercase;
@@ -347,6 +347,79 @@
             </td>
           </tr>
           {% endfor %}
+          
+        {%- liquid 
+          if section.settings.upsell_product
+            for item in cart.items
+              if item.product.id == section.settings.upsell_product.id
+              assign upsell_in_cart = true
+              else
+                assign need_upsell = true
+              endif
+            endfor
+          endif
+         -%}
+        {%- if need_upsell and upsell_in_cart != true -%}
+          <tr class="cart__row border-bottom cart-flex">
+            <td class="cart__image-wrapper cart-flex-item">
+              <a href="{{ section.settings.upsell_product.url }}">
+                <img class="cart__image" src="{{ section.settings.upsell_product.featured_image | img_url }}" alt="{{section.settings.upsell_product.title}}">
+              </a>
+            </td>
+            <td class="cart__meta small--text-left cart-flex-item"  colspan="2">
+              <div class="list-view-item__title">
+                <a href="{{ section.settings.upsell_product.url }}" style="color:#8c8c8c">{{section.settings.upsell_product.title}}</a>
+              </div>
+
+              <div style="upsell-description">
+                {{section.settings.upsell_product_text}}
+                
+                <button class="upsell-description upsell-button medium-up--hide">{{ 'products.upsell.add_to_cart_button_text' | t }}</button>
+              </div>
+
+            </td>
+            <td  class="cart__price-wrapper cart-flex-item text-center medium-up--hide" colspan="2" style="color:#8c8c8c">
+              {{ section.settings.upsell_product.price | money }}
+
+            </td>
+            
+            <td class="cart__price-wrapper cart-flex-item text-center small--hide" style="color:#8c8c8c">
+              {{ section.settings.upsell_product.price | money }}
+
+            </td>
+            <td class="text-right upsell small--hide" width="150px">
+              <button class="upsell-button">{{ 'products.upsell.add_to_cart_button_text' | t }}</button>
+            </td>
+          </tr>
+          <script>
+            $('.upsell-button').on('click',function(e){    
+              e.preventDefault();
+              let formData = {
+               'items': [{
+                 'id': {{section.settings.upsell_product.selected_or_first_available_variant.id}},
+                'quantity': 1
+                }]
+              };
+          
+              fetch('/cart/add.js', {
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(formData)
+              })
+              .then(response => {
+                ga('send', { hitType: 'event', eventCategory: 'upsell', eventAction: 'add_cart_upsell', eventLabel: 'cart_upsell'});
+                document.location.reload();
+              })
+              .catch((error) => {
+                console.error('Error:', error);
+              });
+            
+              });
+           
+          </script>
+      {%- endif -%}
         </tbody>
       </table>
         <footer class="cart__footer">
@@ -584,6 +657,20 @@
   "id": "saved_price",
   "label": "Enable Saved Percentage",
   "default": true
+  },
+  {
+  "type": "header",
+  "content": "Upsell cart line product"
+  },
+  {
+    "type": "product",
+    "id": "upsell_product",
+    "label": "Choose Upsell Product"
+  },
+  {
+    "type": "richtext",
+    "id": "upsell_product_text",
+    "label": "ATC text on upsell line"
   },
   {
   "type": "header",
