--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -674,7 +674,71 @@
                         <path d="M15.89 14.696l-4.734-4.734 4.717-4.717c.4-.4.37-1.085-.03-1.485s-1.085-.43-1.485-.03L9.641 8.447 4.97 3.776c-.4-.4-1.085-.37-1.485.03s-.43 1.085-.03 1.485l4.671 4.671-4.688 4.688c-.4.4-.37 1.085.03 1.485s1.085.43 1.485.03l4.688-4.687 4.734 4.734c.4.4 1.085.37 1.485-.03s.43-1.085.03-1.485z"></path>
                     </svg>
                 </div>
-            <div class="go-cart-drawer-progress-bar"></div>
+                {%- if section.settings.enable_progressbar -%}
+                {%- liquid
+                    if localization.country.iso_code != blank
+                        for block in section.blocks
+                            if block.settings.country_select == localization.country.iso_code
+                                assign shipping_money_limit = block.settings.money_limit
+                            else
+                                assign shipping_money_limit = section.settings.default_limit
+                            endif
+                        endfor
+                    else
+                        assign shipping_money_limit = section.settings.default_limit
+                    endif 
+                -%}
+                <style>
+                    /*progress bar*/
+                    .go-cart-drawer-progress-bar {
+                        margin-top: 15px;
+                    }
+                    #progressbar {
+                        background-color: #999999;
+                        position: relative;
+                        margin-top: 35px;
+                        margin: 0 20px;
+                        /* (height of inner div) / 2 + padding */
+                    }
+                
+                    #progressbar>div {
+                        background-color: #1a1a1a;
+                        display: flex;
+                        align-items: center;
+                        height: 20px;
+                    }
+                    #progressbar>span>img {
+                        margin: 0 15px;
+                    }
+                    #progressbar>span {
+                        display: flex;
+                        align-items: center;
+                        color:white;
+                        text-transform: uppercase;
+                        font-size: 12px;
+                        font-weight: 600;
+                        position: absolute;
+                        top: 1px;
+                    }
+                    .shiping-progressbar span.money {
+                        margin-right: 5px;
+                    }
+                </style>
+                <div data-shipping-limit="{{shipping_money_limit}}" class="go-cart-drawer-progress-bar"></div>
+                <script>
+                    {%comment%}
+                        token=bfdc4f6f5babff
+                        token=ea639b54a40421
+                    {%endcomment%}
+                            $.get("https://ipinfo.io/json?token=ea639b54a40421", function (response) {
+                                if (!response) {
+                                    $.get("https://ipinfo.io/json?token=ea639b54a40421", function (response) {if (response.country != "US"){ $('.go-cart-drawer-progress-bar').hide();$('.custom-tax-new').hide();} });
+                                } else {
+                                    if (response.country != "US"){ $('.go-cart-drawer-progress-bar').hide();$('.custom-tax-new').hide();} 
+                                } 
+                                });
+                </script>
+            {%- endif -%}
              <!--go cart drawer header-->
             <div class="go-cart-drawer__header">
                 <div class="go-cart-drawer__header-items">
@@ -887,18 +951,6 @@
         $('.upsell-anoncment-popup').click( function () {
             $('.announcement-slider').slick({infinite:!1,arrows:!0,dots:!1,slidesToShow:1,slidesToScroll:1,variableWidth:!1,swipeToSlide:!0,rows:0,autoplay:true,autoplaySpeed:2000,responsive:[{breakpoint:1199,settings:{slidesToShow:1,variableWidth:!1}}]}).slick("slickGoTo",0);
         });
-{%comment%}
-    token=bfdc4f6f5babff
-    token=ea639b54a40421
-{%endcomment%}
-        $.get("https://ipinfo.io/json?token=ea639b54a40421", function (response) {
-            if (!response) {
-                $.get("https://ipinfo.io/json?token=ea639b54a40421", function (response) {if (response.country != "US"){ $('.go-cart-drawer-progress-bar').hide();$('.custom-tax-new').hide();} });
-            } else {
-                if (response.country != "US"){ $('.go-cart-drawer-progress-bar').hide();$('.custom-tax-new').hide();} 
-            } 
-            });
-
         $('.upsell-button').on('click',function(e){    
         e.preventDefault();
         let formData = {
@@ -929,3 +981,45 @@
         });
     
     </script>
+{% schema %}
+{
+    "name": "Go cart",
+    "tag": "section",
+    "settings": [
+      {
+          "type": "checkbox",
+          "id": "enable_progressbar",
+          "label": "Enable progress bar",
+          "default": true
+      },
+      {
+          "type": "text",
+          "id": "default_limit",
+          "label": "Defaul limit if country not detected",
+          "default": "100"
+      }
+    ],
+    "blocks": [
+      {
+          "name": "Country limit",
+          "type": "text",
+          "settings": [
+              {
+                  "type": "select",
+                  "id": "country_select",
+                  "label": "Select Country",
+                  "options": [
+                  { "value": "AD", "label": "Andorra" },{ "value": "AT", "label": "Austria" },{ "value": "BE", "label": "Belgium" },{ "value": "CY", "label": "Cyprus" },{ "value": "EE", "label": "Estonia" },{ "value": "FI", "label": "Finland" },{ "value": "FR", "label": "France" },{ "value": "DE", "label": "Germany" },{ "value": "GR", "label": "Greece" },{ "value": "IE", "label": "Ireland" },{ "value": "IT", "label": "Italy" },{ "value": "XK", "label": "Kosovo" },{ "value": "LV", "label": "Latvia" },{ "value": "LT", "label": "Lithuania" },{ "value": "LU", "label": "Luxembourg" },{ "value": "MT", "label": "Malta" },{ "value": "MC", "label": "Monaco" },{ "value": "ME", "label": "Montenegro" },{ "value": "NL", "label": "Netherlands" },{ "value": "PT", "label": "Portugal" },{ "value": "SM", "label": "San Marino" },{ "value": "SK", "label": "Slovakia" },{ "value": "SI", "label": "Slovenia" },{ "value": "ES", "label": "Spain" }
+                  ]
+              },
+              {
+                  "type": "text",
+                  "id": "money_limit",
+                  "label": "Money limit",
+                  "default": "100"
+              }
+          ]
+      }
+    ]
+  }
+  {% endschema %}
